# mcp-nbb

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATAFLOWS_CATALOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml  server.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build-catalog.yml  ci.yml  release.yml
src/nbb_mcp/: __init__.py  catalog.py  client.py  config.py  formatter.py  logging.py  query_builder.py  server.py  services.py
src/nbb_mcp/data/catalog/: BE2_DF_AFCSURV.json  BE2_DF_AFCSURV_CREDIT.json  BE2_DF_AGREED_WAGES.json  BE2_DF_AMOLO.json  BE2_DF_AMPORTS.json  BE2_DF_BLS.json  BE2_DF_BLSCCO.json  BE2_DF_BOPBPM6.json  BE2_DF_BSICREDINS.json  BE2_DF_BSIMFI.json  BE2_DF_BUSSURVH2.json  BE2_DF_BUSSURVM.json  BE2_DF_BUSSURVQ.json  BE2_DF_CAPSTOCK2010_DISS.json  BE2_DF_CBANACCA.json  BE2_DF_CBANACCA2.json  BE2_DF_CBANACCA3.json  BE2_DF_CBANACCE.json  BE2_DF_CBANACCE2.json  BE2_DF_CBANACCE3.json  BE2_DF_CBANACCE4.json  BE2_DF_CBRATIOSA.json  BE2_DF_CBRATIOSE.json  BE2_DF_CBSOCBAL.json  BE2_DF_CCR.json  BE2_DF_CGD.json  BE2_DF_CGDCONS.json  BE2_DF_CGDHCM.json  BE2_DF_CGDS1312.json  BE2_DF_CGDS1313.json  BE2_DF_CICR.json  BE2_DF_CONSN.json  BE2_DF_CONSTRUCTION.json  BE2_DF_CRECONSURV.json  BE2_DF_CREDINSCONS00.json  BE2_DF_CREDINSCONS06.json  BE2_DF_CREDINSCONS14.json  BE2_DF_CREDINSCONS18.json  BE2_DF_CREDINSCORP.json  BE2_DF_CREDINSLOANDEP.json  (+182 more)
src/nbb_mcp/models/: catalog.py  errors.py  responses.py  sdmx.py
src/nbb_mcp/parsers/: sdmx_json_v1.py  sdmx_json_v2.py
src/nbb_mcp/resources/: catalog_uri.py
src/nbb_mcp/scripts/: __init__.py  bench.py  build_catalog.py
src/nbb_mcp/tools/: compare.py  describe.py  query.py  quick.py  search.py  status.py
tests/: conftest.py  test_cache.py  test_catalog.py  test_catalog_bundled.py  test_client.py  test_e2e_stdio.py  test_formatter.py  test_parsers.py  test_query_builder.py  test_resources_and_server.py  test_tools.py  test_waf_guard.py
tests/cassettes/: data_DF_EXR.json  dataflow_detail_DF_EXR.json  dataflow_list.json
